fixed loader shift

--- a/packages/scandipwa/src/route/Checkout/Checkout.style.scss
+++ b/packages/scandipwa/src/route/Checkout/Checkout.style.scss
@@ -34,6 +34,10 @@
         }
     }
 
+    &-SummaryFallback {
+        height: var(--summary-height);
+    }
+
     &-FullPageLoader {
         height: 100vh;
         position: fixed;
